--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,9 +4,8 @@ apply plugin: 'com.neenbedankt.android-apt'
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
-
     defaultConfig {
-        applicationId "moe.yamabu.imdemo1"
+        applicationId 'moe.yamabu.wsclwyh'
         minSdkVersion 14
         targetSdkVersion 23
         versionCode 1
@@ -17,6 +16,8 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    productFlavors {
     }
 }
 
